--- a/source/_posts/2019-12-13-tts.markdown
+++ b/source/_posts/2019-12-13-tts.markdown
@@ -10,7 +10,6 @@ tags:
 ##  概述
 
 Tacotron2是由Google Brain 2017年提出来的一个语音合成框架。Tacotron2:一个完整神经网络语音合成方法。模型主要由三部分组成：
-
 • 声谱预测网络：一个引入注意力机制（attention）的基于循环的Seq2seq的特征预测网络，用于从输入的字符序列预测梅尔频谱的帧序列。
 • 声码器（vocoder）：一个WaveNet的修订版，用预测的梅尔频谱帧序列来生成时域波形样本。
 • 中间连接层：使用低层次的声学表征-梅尔频率声谱图来衔接系统的两个部分。
@@ -38,7 +37,7 @@ Tacotron2是由Google Brain 2017年提出来的一个语音合成框架。Tacotr
     _special = '-'
     _letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz'
 
-    # Prepend "@" to ARPAbet symbols to ensure uniqueness (some are the same as uppercase letters):
+    # Prepend "@" to ARPAbet symbols to ensure uniqueness:
     _arpabet = ['@' + s for s in cmudict.valid_symbols]
 
     # Export all symbols:
@@ -58,39 +57,38 @@ Tacotron2是由Google Brain 2017年提出来的一个语音合成框架。Tacotr
 
 ### 声音处理
 
-    一般很难直接能从声音的波形图里，提取出声音的特征，需要先进行转换。 一般的话，都是转换为梅尔图谱或者梅尔频率倒谱系数 MFCC， 在骨骼的论文里转换成了梅尔图谱。
+一般很难直接能从声音的波形图里，提取出声音的特征，需要先进行转换。 一般的话，都是转换为梅尔图谱或者梅尔频率倒谱系数 MFCC， 在骨骼的论文里转换成了梅尔图谱。
 
-    •  使用librosa或者scipy.io.wavfile 加载到内存， 得到numpy array
+使用librosa或者scipy.io.wavfile 加载到内存， 得到numpy array
 
-    ```py
-    from scipy.io.wavfile import read
-    sampling_rate, data = read(full_path)
-    ```
+```py
+from scipy.io.wavfile import read
+sampling_rate, data = read(full_path)
+```
 
-    •  进行加窗、短时傅里叶变换进入复数域
-    
-    ```py
-    from scipy.signal import get_window
+进行加窗、短时傅里叶变换进入复数域
 
-    # get window and zero center pad it to filter_length
-    fft_window = get_window(window, win_length, fftbins=True)
-    fft_window = pad_center(fft_window, filter_length)
-    fft_window = torch.from_numpy(fft_window).float()
-    forward_basis *= fft_window
-    inverse_basis *= fft_window
-    
-    forward_transform = F.conv1d(
-            input_data,
-            Variable(self.forward_basis, requires_grad=False),
-            stride=self.hop_length, padding=0)
-            
-    cutoff = int((self.filter_length / 2) + 1)
-    real_part = forward_transform[:, :cutoff, :]  # 实部
-    imag_part = forward_transform[:, cutoff:, :]  # 虚部
-    magnitude = torch.sqrt(real_part ** 2 + imag_part ** 2)
-    mel_output = torch.matmul(self.mel_basis, magnitudes)
-    ```
-   
+```py
+from scipy.signal import get_window
+
+# get window and zero center pad it to filter_length
+fft_window = get_window(window, win_length, fftbins=True)
+fft_window = pad_center(fft_window, filter_length)
+fft_window = torch.from_numpy(fft_window).float()
+forward_basis *= fft_window
+inverse_basis *= fft_window
+# 加窗
+forward_transform = F.conv1d(
+        input_data,
+        Variable(self.forward_basis, requires_grad=False),
+        stride=self.hop_length, padding=0)
+# 短时傅里叶变换       
+cutoff = int((self.filter_length / 2) + 1)
+real_part = forward_transform[:, :cutoff, :]  # 实部
+imag_part = forward_transform[:, cutoff:, :]  # 虚部
+magnitude = torch.sqrt(real_part ** 2 + imag_part ** 2)
+mel_output = torch.matmul(self.mel_basis, magnitudes)
+```
 
 
 ## 注意力机制
