--- a/source/_posts/2019-12-13-tts.markdown
+++ b/source/_posts/2019-12-13-tts.markdown
@@ -159,13 +159,25 @@ plt.show()
 
 (Fig1原始波形，Fig2实数部分, Fig3虚数部分，Fig4绝对值, Fig5归一化，Fig6对称取半)
 
-从上图可以清晰看到傅里叶变换之后， 频域对称性分布， 归一化之后得到每一个频率的振幅。
+从上图可以清晰看到傅里叶变换之后， 频域对称性分布(傅立叶变换的共轭对称性)， 归一化之后得到每一个频率的振幅。
 
 
 #### STFT
 （STFT，short-time Fourier transform，或 short-term Fourier transform)）是和傅里叶变换相关的一种数学变换，用以确定时变信号其局部区域正弦波的频率与相位。
 
 选择一个时频局部化的窗函数，假定分析窗函数g(t)在一个短时间间隔内是平稳（伪平稳）的，移动窗函数，使f(t)g(t)在不同的有限时间宽度内是平稳信号，从而计算出各个不同时刻的功率谱。短时傅里叶变换使用一个固定的窗函数，窗函数一旦确定了以后，其形状就不再发生改变，短时傅里叶变换的分辨率也就确定了。如果要改变分辨率，则需要重新选择窗函数。短时傅里叶变换用来分析分段平稳信号或者近似平稳信号犹可，但是对于非平稳信号，当信号变化剧烈时，要求窗函数有较高的时间分辨率；而波形变化比较平缓的时刻，主要是低频 信号，则要求窗函数有较高的频率分辨率。
+
+#### DCT
+
+由于许多要处理的信号都是实信号，在使用FFT时，对于实信号，傅立叶变换的共轭对称性导致在频域中有一半的数据冗余。
+
+离散余弦变换（DCT）是对实信号定义的一种变换，变换后在频域中得到的也是一个实信号，相比离散傅里叶变换DFT而言, DCT可以减少一半以上的计算。DCT还有一个很重要的性质（能量集中特性）：大多书自然信号（声音、图像）的能量都集中在离散余弦变换后的低频部分，因而DCT在（声音、图像）数据压缩中得到了广泛的使用。由于DCT是从DFT推导出来的另一种变换，因此许多DFT的属性在DCT中仍然是保留下来的。
+
+SciPy.fftpack中，提供了离散余弦变换(DCT)与离散余弦逆变换(IDCT)的实现。我们将上面fft运算改成dct运算， 
+修改后的[代码][i3]运行效果如下:
+
+![](/img/post-ml/tts6.jpg)
+
 
 ## 注意力机制
 
@@ -276,3 +288,5 @@ $$ \alpha_{t,i} = \frac{exp(score(h_t, h_i))}{\sum_{j=1}^{T_x}{exp(score(h_t,h_j
 
 
 [i1]: https://gist.github.com/huailiang/45ccce613e77ce860d4e161ee1ca90fe
+[i2]: https://www.cnblogs.com/jinbuqi/p/11803923.html
+[i3]: https://gist.github.com/huailiang/343da329a0f1d44b82bc1e8d2c0a08ef
