--- a/source/_posts/2019-12-13-tts.markdown
+++ b/source/_posts/2019-12-13-tts.markdown
@@ -9,7 +9,7 @@ tags:
 
 ##  概述
 
-Tacotron2是由Google Brain 2017年提出来的一个语音合成框架。Tacotron2:一个完整神经网络语音合成方法。模型主要由三部分组成：
+Tacotron2是由Google Brain 2017年提出来的一个语音合成框架[Tacotron2][i4]:一个完整神经网络语音合成方法。模型主要由三部分组成：
 • 声谱预测网络：一个引入注意力机制（attention）的基于循环的Seq2seq的特征预测网络，用于从输入的字符序列预测梅尔频谱的帧序列。
 • 声码器（vocoder）：一个WaveNet的修订版，用预测的梅尔频谱帧序列来生成时域波形样本。
 • 中间连接层：使用低层次的声学表征-梅尔频率声谱图来衔接系统的两个部分。
@@ -21,7 +21,7 @@ Tacotron2是由Google Brain 2017年提出来的一个语音合成框架。Tacotr
 
 ### 文字处理
 
-文字主要由字幕和标点、空格等组成， 这里先将文字转换成对应的向量， 如果是汉字的话， 可以先转成拼音。 
+一般传给模型的编码好的词向量，而不是原始的文字， 因此我们需要对文字进行编码,压缩到一个固定长度的向量。文字主要由字幕和标点、空格等组成， 这里先将文字转换成对应的向量， 如果是汉字的话， 可以先转成拼音。 步骤如下：
 
 
 1. 先清除文字里陌生字符， 可以使用正则表达式匹配
@@ -179,114 +179,157 @@ SciPy.fftpack中，提供了离散余弦变换(DCT)与离散余弦逆变换(IDCT
 ![](/img/post-ml/tts6.jpg)
 
 
-## 注意力机制
+## 编码器-解码器(Encoder-Decoder)结构
 
-注意力机制是一种在编码器-解码器结构中使用到的机制, 现在已经在多种任务中使用:
-• 机器翻译(Neural Machine Translation, NMT)
-• 图像描述(Image Captioning (translating an image to a sentence))
-• 文本摘要(Summarization(translating to a more compact language))
-
-而且也不再局限于编码器-解码器结构, 多种变体的注意力结构, 应用在各种任务中.
-
-总的来说, 注意力机制应用在:
-
-允许解码器在序列中的多个向量中, 关注它所需要的信息, 是传统的注意力机制的用法. 由于使用了编码器多步输出, 而不是使用对应步的单一定长向量, 因此保留了更多的信息.
-作用于编码器, 解决表征问题(例如Encoding Vector再作为其他模型的输入), 一般使用自注意力(self-attention)
-
-### 1. 编码器-解码器注意力机制
-
-###### 1.1 编码器-解码器结构
+在原始的编码器-解码器结构中，编码器(encoder)输入一个序列或句子，然后将其压缩到一个固定长度的向量(向量也可以理解为一种形式的序列)中；解码器(decoder)使用固定长度的向量，将其解压成一个序列。
 
 ![](/img/post-ml/tts1.jpg)
 
-如上图, 编码器将输入嵌入为一个向量, 解码器根据这个向量得到输出. 由于这种结构一般的应用场景(机器翻译等), 其输入输出都是序列, 因此也被称为序列到序列的模型Seq2Seq.
+最普遍的方式是使用RNN实现编码器和解码器。
 
-对于编码器-解码器结构的训练, 由于这种结构处处可微, 因此模型的参数θ可以通过训练数据和最大似然估计得到最优解, 最大化对数似然函数以获得最优模型的参数, 即:
+编码器将输入序列映射成固定长度的向量，解码器在生成输出序列阶段，利用注意力机制“关注”向量的不同部分。
 
-$$ {\operatorname{arg\,}}\underset{\theta}{\operatorname{\max}}\,  {\sum_{(x,y)}{\log(y|x;\theta)}}  $$
+## 编码器
 
-这是一种端到端的训练方法.
+前置知识
 
-###### 1.2 编码器
+双向RNN
 
-原输入通过一个网络模型(CNN, RNN, DNN), 编码为一个向量. 由于这里研究的是注意力, 就以双向RNN作为示例模型.
+双向RNN确保模型能够同时感知前向和后向的信息。双向RNN包含两个独立的RNN，一个前向RNN从前向后读入序列(从f1到fTx)，另一个后向RNN从后向前读入序列(从fTx到f1)，最终的输出为两者的拼接。
 
-对于每个时间步t, 双向RNN编码得到的向量ht可以如下表示:
+在Tacotron2中，编码器将输入序列X=[x1,x2,...,xTx]映射成序列H=[h1,h2,...,hTx],其中序列H被称作“编码器隐状态”(encoder hidden states)。注意：编码器的输入输出序列都拥有相同的长度，hi之于相邻分量hj拥有的信息等价于xi之于xj所拥有的信息。
 
-$$  h_t = \left[ \overrightarrow{h_t}; \overleftarrow{h_t} \right]  $$
+在Tacotron2中，每一个输入分量xi就是一个字符。Tacotron2的编码器是一个3层卷积层后跟一个双向LSTM层形成的模块，在Tacotron2中卷积层给予了神经网络类似于N−gram感知上下文的能力。这里使用卷积层获取上下文主要是由于实践中RNN很难捕获长时依赖，并且卷积层的使用使得模型对不发音字符更为鲁棒(如'know'中的'k')。
 
+经词嵌入(word embedding)的字符序列先送入三层卷积层以提取上下文信息，然后送入一个双向的LSTM中生成编码器隐状态，即：
 
-###### 1.3 解码器
+$$ f_{e}=ReLU(F_3*ReLU(F_2*ReLU(F_1*\overline{E}(X))))\\
+H=EncoderRecurrency(f_{e}) $$
 
-这里的解码器是单向RNN结构, 以便在每个时间点上产生输出, 行程序列. 由于解码器仅使用最后时间步T对应的编码器的隐藏向量hTx, Tx指的是当前样本的时间步长度(对于NLP问题, 经常将所有样本处理成等长的). 这就迫使编码器将更多的信息整合到最后的隐藏向量hTx中.
+其中，F1、F2、F3为3个卷积核，ReLU为每一个卷积层上的非线性激活，E¯¯¯¯表示对字符序列X做embedding，EncoderRecurrency表示双向LSTM。
 
-但由于hTx是单个长度一定的向量, 这个单一向量的表征能力有限, 包含的信息量有限, 很多信息都会损失掉.
+编码器隐状态生成后，就会将其送入注意力网络(attention network)中生成上下文向量(context vector)。
 
-注意力机制允许解码器在每一个时间步t处考虑整个编码器输出的隐藏状态序列(h1,h2,⋯,hTx), 从而编码器将更多的信息分散地保存在所有隐藏状态向量中, 而解码器在使用这些隐藏向量时, 就能决定对哪些向量更关心.
+注意力机制
 
-具体来说, 解码器生产的目标序列(y1,⋯,yTx)中的每一个输出(如单词)yt, 都是基于如下的条件分布:
+注意力(attention)用作编码器和解码器的桥接，本质是一个上下文权重向量组成的矩阵。
 
+![](/img/post-ml/tts7.jpg)
 
-$$  P[y_t|\{y1,···, y_{t-1}\}, c_t] = softmax(W_s\overline{h_t})   $$
-
-其中$\overline{h_t}$是引入注意力的隐藏状态向量(attentional hidden state), 如下得到:
-
-$$   \overline{h_t} = tanh(W_c[c_t;h_t])    $$
-
-$h_t$为编码器顶层的隐藏状态, $c_t$是上下文向量, 是通过当前时间步上下文的隐藏向量计算得到的, 主要有全局和局部两种计算方法, 下午中提到. Wc和Ws参数矩阵训练得到. 为了式子的简化没有展示偏置项.
-
-###### 1.4 全局注意力
-
-通过全局注意力计算上下文向量ct时, 使用整个序列的隐藏向量ht, 通过加权和的方式获得. 假设对于样本x的序列长度为Tx, ct如下计算得到:
-
-$$    c_t = \sum_{i=1}^{T_X}{\alpha_{t,i}h_i}       $$
+$$ Attention(Query,Source)=\sum_{i=1}^{L_x}similarity(Query,Key_i)*Value $$
 
 
-其中长度为$T_x$的校准向量alignment vector αt的作用是在t时间步, 隐藏状态序列中的所有向量的重要程度. 其中每个元素$\alpha_{t,i}$的使用softmax方法计算:
+如果在机器翻译(NMT)中，Souce中的Key和Value合二为一，指的是同一个东西，即输入句子中每个单词对应的语义编码。
+
+##### 一般的计算步骤：
+
+步骤一：Key和Value相似度度量：
+
+ 点积 $Similarity(Query,Key)=Query·Key$ 
+
+cos相似性 $Similarity(Query,Key)=\frac{Query·Key_i}{||Query||*||Key_i||}$
+MLP网络 $Similarity(Query,Key_i)=MLP(Query,Key_i)$
+Key和Value还可以拼接后再内积一个参数向量，甚至权重都不一定要归一化
+
+步骤二：softmax归一化(alignments/attention weights):
+$$ a_i=softmax(sim_i)=\frac{e^{sim_i}}{\sum_{j=1}^{L_x}e^{sim_j}} $$
+
+步骤三：Attention数值(context vector)：
+
+$$ Attention(Query,Key)=\sum^{L_x}_{i=1}a_i·Value_i $$
+
+在Tacotron中，注意力计算(attention computation)发生在每一个解码器时间步上，其包含以下阶段：
+
+目标隐状态(上图绿框所示)与每一个源状态(上图蓝框所示)“相比”，以生成注意力权重(attention weights)或称对齐(alignments)：
 
 
-$$ \alpha_{t,i} = \frac{exp(score(h_t,h_i))}{\sum_{j=1}^{T_x}{exp(score(h_t,h_j))}}   $$
+其中，ht为目标隐状态，hs¯¯¯¯¯为源状态，score函数常被称作“能量”(energy)，因此可以表示为e。不同的score函数决定了不同类型的注意力机制。
+
+基于注意力权重，计算上下文向量(context vector)作为源状态的加权平均：
+
+$$ c_t=\sum_s\alpha_{ts}\overline{h_s} $$
+
+注意力向量作为下一个时间步的输入
+
+以下是不同的score函数：
+
+基于内容的注意力机制(content-based attention)：
+
+$$ e_{ij}=score(s_{i-1},h_j)=v_a^Ttanh(W_as_{i-1}+U_ah_j) $$
+
+其中，$s_{i−1}$为上一个时间步中解码器的输出(解码器隐状态，decoder hidden states)，hj是编码器此刻输入(编码器隐状态，encoder hidden state j)，va、Wa和Ua是待训练参数张量。由于$U_ah_j$是独立于解码步i的，因此可以独立提前计算。基于内容的注意力机制能够将不同的输出与相应的输入元素连接，而与其位置无关。在Tacotron2中使用基于内容的注意力机制时，当输出对应于's'的Mel频谱帧，模型会寻找所有所有对应于's'的输入。
+
+基于位置的注意力机制(location-based attention)：
+
+$$ e_{ij}=score(\alpha_{i-1},h_j)=v_a^Ttanh(Wh_j+Uf_{i,j}) $$
+
+其中，fi,j是之前的注意力权重αi−1经卷积而得的位置特征，$f_i=F∗\alpha_{i−1}$，$v_a$、$W_a$、$U_a$和F是待训练参数。
+
+基于位置的注意力机制仅关心序列元素的位置和它们之间的距离。基于位置的注意力机制会忽略静音或减少它们，因为该注意力机制没有发现输入的内容。
+
+混合注意力机制(hybrid attention)：
+
+顾名思义，混合注意力机制是上述两者注意力机制的结合：
+
+$$ e_{ij}=score(s_{i-1},\alpha_{i-1},h_j)=v_a^T\mathop{tanh}(Ws_{i-1}+Vh_j+Uf_{i,j}) $$ 
+
+其中，$s_{i−1}$为之前的解码器隐状态，$\alpha_{i−1}$是之前的注意力权重，$h_j$是第j个编码器隐状态。为其添加偏置值b，最终的score函数计算如下：
+
+其中，$v_a$、W、V、U和b为待训练参数，$s_{i−1}$为上一个时间步中解码器隐状态，hj是当前编码器隐状态，$f_{i,j}$是之前的注意力权重$α_{i−1}$经卷积而得的位置特征(location feature)， $f_i=F∗\alpha_{i−1}$。混合注意力机制能够同时考虑内容和输入元素的位置。
+
+Tacotron2注意力机制，Location Sensitive Attention
+
+$$ e_{i,j}=score(s_i,c\alpha_{i-1},h_j)=v_a^T\mathop{tanh}(Ws_i+Vh_j+Uf_{i,j}+b) $$
+
+其中，$s_i$为当前解码器隐状态而非上一步解码器隐状态，偏置值b被初始化为0。位置特征fi使用累加注意力权重cαi卷积而来：
+
+$$ f_i=F*c\alpha_{i-1}\\
+c\alpha_i=\sum_{j=1}^{i-1}\alpha_j $$
+
+之所以使用加法累加而非乘法累积，原因如图：
+
+![](/img/post-ml/tts8.jpg)
+
+累加注意力权重，可以使得注意力权重网络了解它已经学习到的注意力信息，使得模型能在序列中持续进行并且避免重复未预料的语音。
+
+整个注意力机制如图：
+
+![](/img/post-ml/tts10.jpg)
 
 
-score函数可以是任意的比对向量的函数, 一般常用:
+## 解码器
 
-点积: $ score(h_t,h_i)=h_t^T h_i $
+解码过程从输入上一步的输出声谱或上一步的真实声谱到PreNet开始，解码过程如图：
 
-这在使用全局注意力时有更好的效果
+![](/img/post-ml/tts9.jpg)
 
-使用参数矩阵:
+PreNet的输出与使用上一个解码步输出计算而得的上下文向量做拼接，然后整个送入RNN解码器中，RNN解码器的输出用来计算新的上下文向量，最后新计算出来的上下文向量与解码器输出做拼接，送入投影层(projection layer)以预测输出。输出有两种形式，一种是声谱帧，一种是<stop token>的概率，后者是一个简单二分类问题，决定解码过程是否结束。使用缩减因子(reduction factor)即每一个解码步仅允许预测r(缩减因子)Mel谱帧，能够有效加速计算，减小内存占用。
 
-$ score(h_t,h_i)=h_t^tW_αh_i $
+## 后处理网络
 
-这就相当于使用了一个全连接层, 这种方法在使用局部注意力时有更好的效果.
+一旦解码器完成解码，预测得到的Mel谱被送入一系列的卷积层中以提高生成质量。
 
-![](/img/post-ml/tts3.jpg)
+后处理网络使用残差(residual)计算：
 
+$$ y_{final}=y+y_r $$
 
-###### 1.5 局部注意力
+其中，y为原始输入
 
-全局注意力需要在序列中所有的时间步上进行计算, 计算的代价是比较高的, 可以使用固定窗口大小的局部注意力机制, 窗口的大小为2D+1. D为超参数, 为窗口边缘距离中心的单方向距离. 上下文向量ct的计算方法如下:
+上式中，
 
-$$   c_t = \sum_{i=p_t-D}^{p_t+D}{\alpha_{t,i}h_i}      $$
+$$ y_r=PostNet(y)=W_{ps}f_{ps}+b_{ps} $$
 
+其中，fps=Fps,i∗x，x为上一个卷积层的输出或解码器输出，F为卷积
 
-可以看到, 只是考虑的时间步范围的区别, 其他完全相同. pt作为窗口的中心, 可以直接使其等于当前时间步t, 也可以设置为一个变量, 通过训练获得, 即:
+### 训练
 
+$$ loss=\frac{1}{n}\sum_{i=1}^{n}(y_{real,i}-y_i)^2+\frac{1}{n}\sum_{i=1}^n(y_{real,i}-y_{final,i})^2+\lambda\sum_{j=1}^p w_j^2 $$
 
-$$  p_t = T_x\sigma(\nu_p^T \tanh(W,_PH_T)) $$
-
-
-其中σ为sigmoid函数, $\nu_p$和 $W_p$均为可训练参数. 因此这样计算得到的pt是一个浮点数, 但这并没有影响, 因为计算校准权重向量$α_t$时, 增加了一个均值为pt, 标准差为D2的正态分布项:
-
-$$ \alpha_{t,i} = \frac{exp(score(h_t, h_i))}{\sum_{j=1}^{T_x}{exp(score(h_t,h_j))}} exp(-\frac{(i-p_t)^2}{2(D/2)^2}) $$
-
-局部注意力机制总结如下图:
-
-![](/img/post-ml/tts4.jpg)
-
-
-
+其中，yreal,i为真实声谱，yi、yfinal,i分别为进入后处理网络前、后的声谱，n为batch中的样本数，λ为正则化参数，p为参数总数，w​为神经网络中的参数。注意，不需要正则化偏置值。
 
 [i1]: https://gist.github.com/huailiang/45ccce613e77ce860d4e161ee1ca90fe
 [i2]: https://www.cnblogs.com/jinbuqi/p/11803923.html
 [i3]: https://gist.github.com/huailiang/343da329a0f1d44b82bc1e8d2c0a08ef
+[i4]: https://arxiv.org/abs/1712.05884
+[i5]: https://github.com/NVIDIA/tacotron2
+[i6]: https://www.cnblogs.com/mengnan/p/9527797.html
