--- a/source/_posts/2019-12-13-tts.markdown
+++ b/source/_posts/2019-12-13-tts.markdown
@@ -56,7 +56,7 @@ Tacotron2是由Google Brain 2017年提出来的一个语音合成框架[Tacotron
 
 ### 声音处理
 
-一般很难直接能从声音的波形图里，提取出声音的特征，需要先进行转换。 一般的话，都是转换为梅尔图谱或者梅尔频率倒谱系数 MFCC， 在骨骼的论文里转换成了梅尔图谱。
+一般很难直接能从声音的波形图里，提取出声音的特征，需要先进行转换。 一般的话，都是转换为梅尔图谱或者梅尔频率倒谱系数 MFCC， 在[谷歌的论文][i4]里转换成了梅尔图谱。
 
 使用librosa或者scipy.io.wavfile 加载到内存， 得到numpy array
 
