--- a/source/_posts/2019-12-13-tts.markdown
+++ b/source/_posts/2019-12-13-tts.markdown
@@ -105,7 +105,7 @@ mel_output = torch.matmul(self.mel_basis, magnitudes)
 
 • A[i] = real + j * imag，是一个复数，相位就是复数的辐角，相位 = arg(real/imag)
 
-• 振幅就是复数的模，振幅 = sqrt(real^2+imag^2)。但是fft的返回值的模是放大值，直流分量的振幅放大了N倍，弦波分量的振幅放大了N/2倍
+• 振幅就是复数的模，振幅 = $\sqrt{real^2+imag^2}$。但是fft的返回值的模是放大值，直流分量的振幅放大了N倍，弦波分量的振幅放大了N/2倍
 
 ```py
 import numpy as np
@@ -163,7 +163,7 @@ plt.show()
 
 
 #### STFT
-（STFT，short-time Fourier transform，或 short-term Fourier transform)）是和傅里叶变换相关的一种数学变换，用以确定时变信号其局部区域正弦波的频率与相位。
+短时傅里叶变换（STFT，short-time Fourier transform，或 short-term Fourier transform)）是和傅里叶变换相关的一种数学变换，用以确定时变信号其局部区域正弦波的频率与相位。
 
 选择一个时频局部化的窗函数，假定分析窗函数g(t)在一个短时间间隔内是平稳（伪平稳）的，移动窗函数，使f(t)g(t)在不同的有限时间宽度内是平稳信号，从而计算出各个不同时刻的功率谱。短时傅里叶变换使用一个固定的窗函数，窗函数一旦确定了以后，其形状就不再发生改变，短时傅里叶变换的分辨率也就确定了。如果要改变分辨率，则需要重新选择窗函数。短时傅里叶变换用来分析分段平稳信号或者近似平稳信号犹可，但是对于非平稳信号，当信号变化剧烈时，要求窗函数有较高的时间分辨率；而波形变化比较平缓的时刻，主要是低频 信号，则要求窗函数有较高的频率分辨率。
 
@@ -195,11 +195,11 @@ SciPy.fftpack中，提供了离散余弦变换(DCT)与离散余弦逆变换(IDCT
 
 ### 双向RNN
 
-双向RNN确保模型能够同时感知前向和后向的信息。双向RNN包含两个独立的RNN，一个前向RNN从前向后读入序列(从f1到$f_{Tx}$)，另一个后向RNN从后向前读入序列(从$f_{Tx}$到f1)，最终的输出为两者的拼接。
+双向RNN确保模型能够同时感知前向和后向的信息。双向RNN包含两个独立的RNN，一个前向RNN从前向后读入序列(从$f_1$到$f_{Tx}$)，另一个后向RNN从后向前读入序列(从$f_{Tx}$到$f_1$)，最终的输出为两者的拼接。
 
-在Tacotron2中，编码器将输入序列X=[x1,x2,...,xTx]映射成序列H=[h1,h2,...,hTx],其中序列H被称作“编码器隐状态”(encoder hidden states)。注意：编码器的输入输出序列都拥有相同的长度，hi之于相邻分量hj拥有的信息等价于xi之于xj所拥有的信息。
+在Tacotron2中，编码器将输入序列$X=[x_1,x_2,...,x_{T_x}]$映射成序列$H=[h_1,h_2,...,h_{T_x}]$,其中序列H被称作“编码器隐状态”(encoder hidden states)。注意：编码器的输入输出序列都拥有相同的长度，$h_i$之于相邻分量$h_j$拥有的信息等价于$x_i$之于$x_j$所拥有的信息。
 
-在Tacotron2中，每一个输入分量xi就是一个字符。Tacotron2的编码器是一个3层卷积层后跟一个双向LSTM层形成的模块，在Tacotron2中卷积层给予了神经网络类似于N−gram感知上下文的能力。这里使用卷积层获取上下文主要是由于实践中RNN很难捕获长时依赖，并且卷积层的使用使得模型对不发音字符更为鲁棒(如'know'中的'k')。
+在Tacotron2中，每一个输入分量$x_i$就是一个字符。Tacotron2的编码器是一个3层卷积层后跟一个双向LSTM层形成的模块，在Tacotron2中卷积层给予了神经网络类似于N−gram感知上下文的能力。这里使用卷积层获取上下文主要是由于实践中RNN很难捕获长时依赖，并且卷积层的使用使得模型对不发音字符更为鲁棒(如'know'中的'k')。
 
 经词嵌入(word embedding)的字符序列先送入三层卷积层以提取上下文信息，然后送入一个双向的LSTM中生成编码器隐状态，即：
 
@@ -210,7 +210,7 @@ H=EncoderRecurrency(f_{e}) $$
 
 编码器隐状态生成后，就会将其送入注意力网络(attention network)中生成上下文向量(context vector)。
 
-注意力机制
+### 注意力机制
 
 注意力(attention)用作编码器和解码器的桥接，本质是一个上下文权重向量组成的矩阵。
 
@@ -253,13 +253,13 @@ $$ c_t=\sum_s\alpha_{ts}\overline{h_s} $$
 
 以下是不同的score函数：
 
-基于内容的注意力机制(content-based attention)：
+#### 基于内容的注意力机制(content-based attention)：
 
 $$ e_{ij}=score(s_{i-1},h_j)=v_a^Ttanh(W_as_{i-1}+U_ah_j) $$
 
 其中，$s_{i−1}$为上一个时间步中解码器的输出(解码器隐状态，decoder hidden states)，$h_j$是编码器此刻输入(编码器隐状态，encoder hidden state j)，$v_a$、$W_a$和$U_a$是待训练参数张量。由于$U_ah_j$是独立于解码步i的，因此可以独立提前计算。基于内容的注意力机制能够将不同的输出与相应的输入元素连接，而与其位置无关。在Tacotron2中使用基于内容的注意力机制时，当输出对应于's'的Mel频谱帧，模型会寻找所有所有对应于's'的输入。
 
-基于位置的注意力机制(location-based attention)：
+#### 基于位置的注意力机制(location-based attention)：
 
 $$ e_{ij}=score(\alpha_{i-1},h_j)=v_a^Ttanh(Wh_j+Uf_{i,j}) $$
 
@@ -267,7 +267,7 @@ $$ e_{ij}=score(\alpha_{i-1},h_j)=v_a^Ttanh(Wh_j+Uf_{i,j}) $$
 
 基于位置的注意力机制仅关心序列元素的位置和它们之间的距离。基于位置的注意力机制会忽略静音或减少它们，因为该注意力机制没有发现输入的内容。
 
-### 混合注意力机制(hybrid attention)：
+#### 混合注意力机制(hybrid attention)：
 
 顾名思义，混合注意力机制是上述两者注意力机制的结合：
 
@@ -277,7 +277,7 @@ $$ e_{ij}=score(s_{i-1},\alpha_{i-1},h_j)=v_a^T\mathop{tanh}(Ws_{i-1}+Vh_j+Uf_{i
 
 其中，$v_a$、W、V、U和b为待训练参数，$s_{i−1}$为上一个时间步中解码器隐状态，$h_j$是当前编码器隐状态，$f_{i,j}$是之前的注意力权重$α_{i−1}$经卷积而得的位置特征(location feature)， $f_i=F∗\alpha_{i−1}$。混合注意力机制能够同时考虑内容和输入元素的位置。
 
-Tacotron2注意力机制，Location Sensitive Attention
+#### Tacotron2注意力机制，Location Sensitive Attention
 
 $$ e_{i,j}=score(s_i,c\alpha_{i-1},h_j)=v_a^T\mathop{tanh}(Ws_i+Vh_j+Uf_{i,j}+b) $$
 
