--- a/source/_posts/2019-12-19-cuda.markdown
+++ b/source/_posts/2019-12-19-cuda.markdown
@@ -403,7 +403,8 @@ if (cacheIndex == 0)
 * NVIDIA 型号对应的计算能力(Compute Capabilities)表
 
 ### Quadro Desktop Products
-<table class="table table-striped">
+
+<table>
     <thead>
         <tr>
             <th>GPU</th>
@@ -552,7 +553,7 @@ if (cacheIndex == 0)
 </table>
 
 ### Quadro Mobile  Products
-<table class="table table-striped">
+<table>
     <thead>
         <tr>
             <th>GPU</th>
