--- a/source/_posts/2019-06-07-engine.markdown
+++ b/source/_posts/2019-06-07-engine.markdown
@@ -15,7 +15,7 @@ tags:
 
 <center>
     <img src="/img/post-engine/bitmapfont.png" height="480"/>
-</center>><br><br>
+</center><br><br>
 
 
 使用这种方式绘制文本有许多优势也有很多缺点。首先，它相对来说很容易实现，并且因为位图字体已经预光栅化了，它的效率也很高。然而，这种方式不够灵活。当你想要使用不同的字体时，你需要重新编译一套全新的位图字体，而且你的程序会被限制在一个固定的分辨率。如果你对这些文本进行缩放的话你会看到文本的像素边缘。
@@ -32,7 +32,7 @@ TrueType字体不是用像素或其他不可缩放的方式来定义的，它是
 
 <center>
     <img src="/img/post-engine/glyph.png" />
-</center>><br>
+</center><br>
 
 每一个字形都放在一个水平的基准线(Baseline)上（即上图中水平箭头指示的那条线）。一些字形恰好位于基准线上（如’X’），而另一些则会稍微越过基准线以下（如’g’或’p’）（译注：即这些带有下伸部的字母，可以见这里）。这些度量值精确定义了摆放字形所需的每个字形距离基准线的偏移量，每个字形的大小，以及需要预留多少空间来渲染下一个字形。下面这个表列出了我们需要的所有属性。
 
