--- a/source/_posts/2019-07-18-vr.markdown
+++ b/source/_posts/2019-07-18-vr.markdown
@@ -101,7 +101,7 @@ FragColor = color;
 
 <center>
     <img src="/img/post-vr/vr2.png" height="240"/>
-</center>><br><br>
+</center><br><br>
 
 计算摄像机的位置，首先需要对摄像机进行标定，标定是确定摄像机内参矩阵K的过程，一般用棋盘进行标定，这已经是一个很成熟的方法了，在这就不细说了。得到相机的内参矩阵K后，就可以使用solvePnP方法求取摄像机关于某个Marker的位置（这里理解成相机的位置和旋转更确切些， 以虚拟物品当做世界坐标原点，即虚拟物品的模型空间等于世界空间，通过得来的转换矩阵变换到view空间）。摄像机成像使用小孔模型，如下：
 
@@ -213,7 +213,7 @@ $$ d  = \frac{b+t}{h} = \frac{2c_y-h}{h} = \frac{2c_y}{h} - 1 $$
 
 <center>
     <img src="/img/post-vr/vr8.jpg" height="280"/>
-</center>><br><br>
+</center><br><br>
 
 $$ P =
 \left[
