--- a/source/_posts/2019-12-11-sound.markdown
+++ b/source/_posts/2019-12-11-sound.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "librosa处理音频信号"
+title:      "Librosa处理音频信号"
 date:       2019-12-11 03:00:00
 author:     "Huailiang"
 tags:
