--- a/source/_posts/2019-11-23-face.markdown
+++ b/source/_posts/2019-11-23-face.markdown
@@ -68,6 +68,7 @@ tags:
 </table>
 </div>
 最后将RenderTexture内容转换保存到一张jpg图片中，具体实现的代码如下：
+
 ```c#
 Texture2D tex = new Texture2D(rt.width, rt.height, TextureFormat.RGBA32, false);
 tex.ReadPixels(new Rect(0, 0, rt.width, rt.height), 0, 0);
@@ -281,11 +282,9 @@ $$  x \leftarrow x - \mu \frac{\delta \zeta_S}{\delta x} (\mu: learning rate)$$
 
 ### 写在最后：
 
-* 1. 对于外部的图片，一般我们建议首先使用dlib截面部的图， 往往dlib生成的图片和trainset的图片脸部整体轮廓存在一个的偏差， 我们建议先去PS里微调一下， 比如说dataset没有脖子，而dlib却保留了较多部分的脖子。因为我们脸部语义分割网络定义的loss 函数是了l1, 稍微调整之后，能大大加快网络的收敛速度。
+* 对于外部的图片，一般我们建议首先使用dlib截面部的图， 往往dlib生成的图片和trainset的图片脸部整体轮廓存在一个的偏差， 我们建议先去PS里微调一下， 比如说dataset没有脖子，而dlib却保留了较多部分的脖子。因为我们脸部语义分割网络定义的loss 函数是了l1, 稍微调整之后，能大大加快网络的收敛速度。
 
-<br>
-
-* 2. 可能读者更希望看到我们的神经网络能够还原的不仅仅是testset脸部的参数, 而是像论文里还原出一些明星的脸型，甚至是自己上传的一些照片的脸型，这当然是可行的。但这对游戏里的模型提出了一定要求，游戏里拉扯骨骼不能带来畸变或者穿帮， 即蒙皮的时候需更符合物理， 我在调试测试的模型的时候，稍微拉扯眉毛的骨骼，眼珠或者发型就穿帮了， 所以控制这些参数的范围其实设置了一个很小的范围值。
+* 可能读者更希望看到我们的神经网络能够还原的不仅仅是testset脸部的参数, 而是像论文里还原出一些明星的脸型，甚至是自己上传的一些照片的脸型，这当然是可行的。但这对游戏里的模型提出了一定要求，游戏里拉扯骨骼不能带来畸变或者穿帮， 即蒙皮的时候需更符合物理， 我在调试测试的模型的时候，稍微拉扯眉毛的骨骼，眼珠或者发型就穿帮了， 所以控制这些参数的范围其实设置了一个很小的范围值。
 
 
 <br>
