--- a/source/_posts/2020-01-03-ray.markdown
+++ b/source/_posts/2020-01-03-ray.markdown
@@ -466,15 +466,13 @@ bool IntersectPlane(Ray ray)
 
 圆：pos+radius
 
-得到向量d d= pos-O
+得到向量 $d= pos-O$
 
-点乘单位向量得到投影P1 P_1=d\cdot D
+点乘单位向量得到投影 $P_1=d\cdot D$
 
-两次勾股定律得到p2平方 (P_2)^2=r^2-(d^2-p_1^2)
+两次勾股定律得到p2平方 $(P_2)^2=r^2-(d^2-p_1^2)$
 
-<0无解 =0 一解 >0 两解
-
-t=P_1\pm P_2
+<0无解 =0 一解 >0 两解 $t=P_1\pm P_2$
 
 如果有两个解，就选距离最短的那个解,看图可以知道最短的就是进入圆的点，圆的是退出圆。
 
